[Cleanup] merged cases; .tolist; pattern matching
Change-Id: Ia6fc9022d3f18f4fd8e3463b0ba8a1f27aeab3ea